[package]
name = "rei"
version = "0.1.0"
edition = "2021"

[dependencies]

cranelift = "0.119.0"
cranelift-codegen = "0.119"
cranelift-frontend = "0.119"
cranelift-module = "0.119"
cranelift-jit = "0.119"
cranelift-native = "0.119"

once_cell = "1.21.3"
signal-hook = "0.3.17"
target-lexicon = "0.13.2"
